Fix image width on mobile

--- a/resources/css/bem/menu-image.less
+++ b/resources/css/bem/menu-image.less
@@ -11,6 +11,7 @@
   &__image {
     object-fit: contain;
     height: 100%;
+    max-width: 100%;
     margin: auto;
     display: block;
   }
